--- a/PmProject-SPA/src/app/project/project.component.html
+++ b/PmProject-SPA/src/app/project/project.component.html
@@ -43,29 +43,30 @@
                 </ng-container>
 
                 <ng-container matColumnDef="name">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อโครงการ</th>
+                  <th style="width: 25%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อโครงการ</th>
                   <td mat-cell *matCellDef="let element" data-label="ชื่อโครงการ"> {{element.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="templateServiceOrder">
-                  <th style="width: 30%;" mat-header-cell *matHeaderCellDef mat-sort-header>แบบฟอร์มที่ใช้งาน</th>
+                  <th style="width: 25%;" mat-header-cell *matHeaderCellDef mat-sort-header>แบบฟอร์มที่ใช้งาน</th>
                   <td mat-cell *matCellDef="let element" data-label="แบบฟอร์มที่ใช้งาน">
                     {{element.templateServiceOrder.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="export">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Export </th>
+                  <th style="width: 10%;" mat-header-cell *matHeaderCellDef mat-sort-header>Export </th>
                   <td mat-cell *matCellDef="let element" data-label="Export">
-                    <a (click)="export(element.id)">Export</a> </td>
+                    <a *ngIf="element.serviceOrder?.length !== 0" (click)="export(element.id)"><i
+                        class="fas fa-file-download"></i> Export</a> </td>
                 </ng-container>
                 <ng-container matColumnDef="serviceOrder">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>ข้อมูลใบสั่งงาน</th>
+                  <th style="width: 15%;" mat-header-cell *matHeaderCellDef mat-sort-header>ข้อมูลใบสั่งงาน</th>
                   <td mat-cell *matCellDef="let element" data-label="ข้อมูลใบสั่งงาน">
                     <a (click)="serviceOrder(element.id)"><i class="fas fa-folder-plus"></i>เพิ่มใบสั่งงาน</a> </td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
-                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <th style="width: 25%;" mat-header-cell *matHeaderCellDef> </th>
                   <td class="text-right" mat-cell *matCellDef="let element ">
                     <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">แก้ไข</button>
                     <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button>
