--- a/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
@@ -35,18 +35,25 @@
                 </td>
               </ng-container>
 
-              <!-- Name Column -->
               <ng-container matColumnDef="name">
-                <th style="width: 70%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อแบบฟอร์ม</th>
+                <th style="width: 55%;" mat-header-cell *matHeaderCellDef mat-sort-header>ชื่อแบบฟอร์ม</th>
                 <td mat-cell *matCellDef="let element" data-label="Template Name"> {{element.name}} </td>
               </ng-container>
 
-              <!-- Symbol Column -->
+              <ng-container matColumnDef="createDate">
+                <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>วันที่สร้าง</th>
+                <td mat-cell *matCellDef="let element" data-label="Template Name">
+                  {{element.modifiedDate | date:'dd/MM/yyyy'}} </td>
+              </ng-container>
+
               <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef> </th>
+                <th style="width: 25%;" mat-header-cell *matHeaderCellDef> </th>
                 <td class="text-right" mat-cell *matCellDef="let element ">
-                  <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">แก้ไข</button>
-                  <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button> </td>
+                  <ng-container *ngIf="element.project.length === 0">
+                    <button type="button " (click)="edit(element.id)" class="btn btn-sm btn-success mr-2">แก้ไข</button>
+                    <button type="button" (click)="delete(element.id)" class="btn btn-sm btn-danger">ลบ</button>
+                  </ng-container>
+                </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
