--- a/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
+++ b/PmProject-SPA/src/app/template-service-order/template-service-order.component.html
@@ -41,7 +41,7 @@
               </ng-container>
 
               <ng-container matColumnDef="createDate">
-                <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>วันที่สร้าง</th>
+                <th style="width: 20%;" mat-header-cell *matHeaderCellDef mat-sort-header>แก้ไขล่าสุด</th>
                 <td mat-cell *matCellDef="let element" data-label="Template Name">
                   {{element.modifiedDate | date:'dd/MM/yyyy'}} </td>
               </ng-container>
